# EvCache

./: .gitignore  CMakeLists.txt  README.md
docs/: 1-overview.md  2-utilities.md  3-cache-parameters.md  4-gpa-hpa-debug.md  5-graphing-and-data.md
docs/6-case-studies/: 1-lcas.md  2-vcpc.md
include/: asm.h  bitwise.h  cache_info.h  cache_ops.h  colors.h  common.h  config.h  evset.h  evset_para.h  helper_thread.h  lats.h  mem.h  utils.h  vset_ops.h
kern_mods/: README.md  setup_all_mods.sh
kern_mods/gpa_hpa_km/: README.md  gpa_hpa.c  hc.diff  setup_mod.sh
kern_mods/vcolor_km/: Makefile  README.md  setup_mod.sh  vcolor.diff  vcolor_km.c
scripts/: README.md  build.sh  plot_eviction_pct_xp.py  plot_eviction_rate_wait.py  plot_evictions_freq.py  plot_evrate_over_time.py  plot_l2color_distribution.py  plot_l2color_heatmap.py  setup_vset.sh  thread_cpu_profile.py
scx/: Cargo.toml  README.md  meson.build  meson.options
scx/meson-scripts/: stress_tests.ini  test_sched
scx/scheds/: meson.build
scx/scheds/rust/scx_rusty/src/: main.rs  tuner.rs
scx/scheds/rust/scx_rusty/src/bpf/: main.bpf.c
src/: README.md  cache_info.c  cache_ops.c  config.c  evset.c  evset_para.c  helper_thread.c  lats.c  mem.c  polluter.c  utils.c  vcolor.c  vevict.c  vpoisoner.c  vset.c  vset_ops.c  vtest.c
vm_tools/: gpa_hpa.c  gpa_hpa.h  vtop.c  vtop.h
