[workspace]
members = [
    "rust/scx_stats",
    "rust/scx_stats/scx_stats_derive",
    "rust/scx_utils",
    "scheds/rust/scx_rusty",
]
resolver = "2"

[profile.release]
lto = "thin"

[profile.release-tiny]
inherits = "release"
lto = "thin"
strip = true
incremental = true

[profile.release-fast]
inherits = "release"
target-cpu = "native"
lto = false
incremental = true
